force-app/main/default/objects/Contact/fields/adherent__c.field-meta.xml
<CustomField>
    <fullName>adherent__c</fullName>
    <formula>if( npo02__MembershipEndDate__c &gt; TODAY() ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adhérent</label>
    <type>Checkbox</type>
</CustomField>