force-app/main/default/objects/Contact/fields/contact_comment_connu__c.field-meta.xml
<CustomField>
    <fullName>contact_comment_connu__c</fullName>
    <label>Comment nous avez-vous connu?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Autres associations</fullName>
            </value>
            <value>
                <fullName>bouche à oreilles</fullName>
            </value>
            <value>
                <fullName>Presse écrite</fullName>
            </value>
            <value>
                <fullName>Emission de télévision</fullName>
            </value>
            <value>
                <fullName>Envoi d&#39;un Stop Pub</fullName>
            </value>
            <value>
                <fullName>Conférence</fullName>
            </value>
            <value>
                <fullName>Evenement</fullName>
            </value>
            <value>
                <fullName>Festival Zero Waste</fullName>
            </value>
            <value>
                <fullName>La Maison du Zéro Déchet</fullName>
            </value>
            <value>
                <fullName>Groupe Local</fullName>
            </value>
            <value>
                <fullName>Le Scenario Zero Waste</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>