force-app/main/default/objects/Contact/fields/Moyens_de_Paiement_ann_e_derni_re__c.field-meta.xml
<CustomField>
    <fullName>Moyens_de_Paiement_ann_e_derni_re__c</fullName>
    <label>Moyens de Paiement (année dernière)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>