force-app/main/default/objects/Contact/fields/Moyens_de_Paiement_annee_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Moyens_de_Paiement_annee_en_cours__c</fullName>
    <label>Moyens de Paiement (année en cours)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>