force-app/main/default/objects/Contact/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le contact est-il abonné à la newsletter?</description>
    <label>Abonné Newsletter?</label>
    <type>Checkbox</type>
</CustomField>